--- a/LBFD-Net/notebooks/LBFD-Net_Fine_Tuning.ipynb
+++ b/LBFD-Net/notebooks/LBFD-Net_Fine_Tuning.ipynb
@@ -674,6 +674,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14cc0aa8-f1b6-44e2-bd01-8bfec2a9caa6",
+   "metadata": {},
+   "source": [
+    "**Base model:** LBFD-Net pretrained on indoor fall detection dataset.\n",
+    "\n",
+    "🔗 Download:  \n",
+    "[Baseline LBFD-Net](https://drive.google.com/file/d/1xg7kkB-gS4vR4WwMTuaj-WCVeQR7Dy3y/view?usp=drive_link)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "id": "76c750ca-97a8-4776-9bc0-d02468eed911",
@@ -768,7 +779,18 @@
    "id": "94d73ab6-195a-46d4-9eb3-0626a4570eb4",
    "metadata": {},
    "source": [
-    "Fine Tuning on in painting"
+    "# Fine Tuning on Inpainting Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99b442e9-0f56-49d5-bc0b-4de41d967b8c",
+   "metadata": {},
+   "source": [
+    "**Base model:** LBFD-Net pretrained on indoor fall detection dataset.\n",
+    "\n",
+    "🔗 Download:  \n",
+    "[Baseline LBFD-Net](https://drive.google.com/file/d/1xg7kkB-gS4vR4WwMTuaj-WCVeQR7Dy3y/view?usp=drive_link)\n"
    ]
   },
   {
@@ -1000,6 +1022,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "39d2bdf1-e5e2-4632-bf3e-acab9a02eeb7",
+   "metadata": {},
+   "source": [
+    "### LBFD-Net fine-tuned on Inpainting Dataset\n",
+    "🔗 Download:  \n",
+    "[LBFD-Net Inpainting Fine-Tuned](https://drive.google.com/drive/folders/1VrsL3T8XwnJ_b3o2n4YhnJiKqUvevq25?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "14aaee90-b721-42f1-bd86-c62f25ce77a6",
@@ -1143,7 +1175,7 @@
    "id": "1b013749-70cd-4ea7-b395-e62cfc7da5fc",
    "metadata": {},
    "source": [
-    "Evaluate on all dataset test set"
+    "## Evaluate on all dataset test set"
    ]
   },
   {
@@ -1226,7 +1258,18 @@
    "id": "428b3ab3-4597-4fec-bc31-c809f799a2f7",
    "metadata": {},
    "source": [
-    "fine tuning on Stable "
+    "# Fine Tuning on Stable Diffusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10f8cf55-70f7-418c-bad2-16173d7eeaf0",
+   "metadata": {},
+   "source": [
+    "**Base model:** LBFD-Net pretrained on indoor fall detection dataset.\n",
+    "\n",
+    "🔗 Download:  \n",
+    "[Baseline LBFD-Net](https://drive.google.com/file/d/1xg7kkB-gS4vR4WwMTuaj-WCVeQR7Dy3y/view?usp=drive_link)\n"
    ]
   },
   {
@@ -1469,6 +1512,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffb868fa-bfdd-45db-8e1f-420cb937efc0",
+   "metadata": {},
+   "source": [
+    "### LBFD-Net fine-tuned on Stable Diffusion Dataset\n",
+    "🔗 Download:  \n",
+    "[LBFD-Net Stable Diffusion Fine-Tuned](https://drive.google.com/drive/folders/1M4JN3QN6JI1HL_4GArmocOY2JzXoXIXX?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "684795df-cfac-48f7-a74a-4e30b4a42b10",
@@ -1611,7 +1664,7 @@
    "id": "b62c4a99-68f6-4d55-8735-84c9375466f4",
    "metadata": {},
    "source": [
-    "Evaluate on all dataset test set"
+    "## Evaluate on all dataset test set"
    ]
   },
   {
@@ -1694,7 +1747,18 @@
    "id": "32fcf5b2-ace5-4378-b564-3e1e041bd8a8",
    "metadata": {},
    "source": [
-    "fine tuning on nano banana"
+    "# Fine Tuning on Nano Banana"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4e18ad5-84d7-477c-b604-e63450a0036c",
+   "metadata": {},
+   "source": [
+    "**Base model:** LBFD-Net pretrained on indoor fall detection dataset.\n",
+    "\n",
+    "🔗 Download:  \n",
+    "[Baseline LBFD-Net](https://drive.google.com/file/d/1xg7kkB-gS4vR4WwMTuaj-WCVeQR7Dy3y/view?usp=drive_link)\n"
    ]
   },
   {
@@ -1943,6 +2007,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7a7954c-c85a-414a-a79a-7c21a5a32623",
+   "metadata": {},
+   "source": [
+    "### LBFD-Net fine-tuned on Nano Banana Dataset\n",
+    "🔗 Download:  \n",
+    "[LBFD-Net Nano Banana Fine-Tuned](https://drive.google.com/drive/folders/11OinO8Dn_lX-4ijNNdg7DNTI7jRGezNn?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "fbf9ada2-adc4-41fd-9749-154f3e43246a",
@@ -2084,7 +2158,7 @@
    "id": "70736053-e2fb-466d-9de3-bb35dad2877b",
    "metadata": {},
    "source": [
-    "Evaluate on all dataset test set"
+    "## Evaluate on all dataset test set"
    ]
   },
   {
@@ -2167,7 +2241,18 @@
    "id": "4e34ff6b-f84a-46de-8257-ee6d00a4ede9",
    "metadata": {},
    "source": [
-    "fine tuning all datasets"
+    "# Fine Tuning  on All Datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a57d9d4-b81b-40cc-92bc-38da17211da3",
+   "metadata": {},
+   "source": [
+    "**Base model:** LBFD-Net pretrained on indoor fall detection dataset.\n",
+    "\n",
+    "🔗 Download:  \n",
+    "[Baseline LBFD-Net](https://drive.google.com/file/d/1xg7kkB-gS4vR4WwMTuaj-WCVeQR7Dy3y/view?usp=drive_link)\n"
    ]
   },
   {
@@ -2393,6 +2478,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55a3a10b-0aa3-4864-938d-059fbf7c05c5",
+   "metadata": {},
+   "source": [
+    "### LBFD-Net fine-tuned on All Synthetic Datasets Combined\n",
+    "🔗 Download:  \n",
+    "[LBFD-Net Combined Synthetic Fine-Tuned](https://drive.google.com/drive/folders/1MutciXfU9ZNelC8mUxNPXY01clVImDAV?usp=sharing)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "id": "ad6e97a9-e6f6-4ac3-94cd-687a2a47107b",
@@ -2554,7 +2649,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
